revised index html document and no data folder in git

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ vignettes/*.pdf
 
 # knitr and R markdown default cache directories
 /*_cache/
+
+# data folder
+data/
 /cache/
 
 # Temporary files created by R markdown
